--- a/index.html
+++ b/index.html
@@ -1,138 +1,172 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="utf-8">
-  <title>Hotspot Ratespiel 🦎</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    body { font-family: Arial; background:#101820; color:#fff; text-align:center; padding:40px; }
-    input,button { padding:10px; border-radius:8px; margin:5px; width:200px; }
-    .box { background:#1e293b; display:inline-block; padding:30px; border-radius:12px; }
-    .secret { font-family: monospace; background:#000; padding:6px; border-radius:8px; }
-  </style>
+<meta charset="UTF-8">
+<title>Hotspot Zahlenspiel 🦎</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+  font-family: Arial;
+  background: #101820;
+  color: #fff;
+  text-align: center;
+  padding: 40px;
+}
+
+.box {
+  background: #1e293b;
+  display: inline-block;
+  padding: 30px;
+  border-radius: 12px;
+  width: 90%;
+  max-width: 400px;
+}
+
+input, button {
+  padding: 12px;
+  margin: 8px 0;
+  border-radius: 8px;
+  border: none;
+  width: 90%;
+  max-width: 300px;
+  font-size: 16px;
+}
+
+button {
+  background-color: #3b82f6;
+  color: #fff;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #2563eb;
+}
+
+#reward {
+  margin-top: 15px;
+  font-weight: bold;
+  color: #9ee7ff;
+  word-break: break-all;
+  user-select: all;
+}
+
+#result {
+  margin-top: 15px;
+  font-weight: bold;
+}
+
+#hint {
+  margin-top: 10px;
+  color: #9aa7b8;
+}
+</style>
 </head>
 <body>
-  <div class="box">
-    <h1>🔥 Hotspot Zahlenspiel 🔥</h1>
-    <p id="rangeInfo">Lade Bereich…</p>
+<div class="box">
+<h1>🔥 Hotspot Zahlenspiel 🔥</h1>
+<p id="rangeInfo">Lade Bereich…</p>
+<p id="info">Lade Einstellungen…</p>
 
-    <p id="info">Lade Einstellungen…</p>
-    <input id="guessInput" type="number" placeholder="Zahl eingeben">
-    <button id="guessBtn">Raten</button>
+<input id="guessInput" type="number" placeholder="Zahl eingeben">
+<button id="guessBtn">Raten</button>
 
-    <p id="result"></p>
-    <div id="passwordBox" style="display:none; margin-top:15px;">
-      🎉 Dein Hotspot-Passwort: <span class="secret" id="pw"></span>
-    </div>
-  </div>
+<p id="result"></p>
+<p id="hint"></p>
+</div>
 
-  <script type="module">
-    const firebaseConfig = {
-      apiKey: "AIzaSyBSDffrKz3_AE_iuwOLuZNB0yWLStMysSI",
-      authDomain: "zahlenerraten.firebaseapp.com",
-      databaseURL: "https://zahlenerraten-default-rtdb.europe-west1.firebasedatabase.app",
-      projectId: "zahlenerraten",
-      storageBucket: "zahlenerraten.firebasestorage.app",
-      messagingSenderId: "143969932071",
-      appId: "1:143969932071:web:850baabab3f9c0f2de0f02",
-      measurementId: "G-KP89LYZJMT"
-    };
+<script type="module">
+const firebaseConfig = {
+  apiKey: "AIzaSyBSDffrKz3_AE_iuwOLuZNB0yWLStMysSI",
+  authDomain: "zahlenerraten.firebaseapp.com",
+  databaseURL: "https://zahlenerraten-default-rtdb.europe-west1.firebasedatabase.app",
+  projectId: "zahlenerraten",
+  storageBucket: "zahlenerraten.firebasestorage.app",
+  messagingSenderId: "143969932071",
+  appId: "1:143969932071:web:850baabab3f9c0f2de0f02",
+  measurementId: "G-KP89LYZJMT"
+};
 
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
-    import { getDatabase, ref, get, child, onValue } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
+import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
+import { getDatabase, ref, get, child } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
 
-    const app = initializeApp(firebaseConfig);
-    const db = getDatabase(app);
+const app = initializeApp(firebaseConfig);
+const db = getDatabase(app);
 
-    const rangeInfo = document.getElementById("rangeInfo");
-    const info = document.getElementById("info");
-    const guessInput = document.getElementById("guessInput");
-    const guessBtn = document.getElementById("guessBtn");
-    const result = document.getElementById("result");
-    const passwordBox = document.getElementById("passwordBox");
-    const pw = document.getElementById("pw");
+const rangeInfo = document.getElementById("rangeInfo");
+const info = document.getElementById("info");
+const guessInput = document.getElementById("guessInput");
+const guessBtn = document.getElementById("guessBtn");
+const result = document.getElementById("result");
+const hint = document.getElementById("hint");
 
-    let randomNumber = 1;
-    let attemptsLeft = 0;
-    let password = "";
-    let lastReload = 0;
-    let randomNumberMode = true;
-    let minNumber = 1;
-    let maxNumber = 50;
+let attemptsLeft = 0;
+let randomNumberMode = true;
+let minNumber = 1;
+let maxNumber = 50;
+let password = "";
+let link = "";
 
-    // 🔹 Einstellungen laden
-    async function loadSettings() {
-      const snapshot = await get(child(ref(db), "settings"));
-      if(snapshot.exists()){
-        const data = snapshot.val();
-        attemptsLeft = data.maxAttempts || 6;
-        password = data.password || "";
-        randomNumberMode = data.randomNumber ?? true;
-        minNumber = data.minNumber || 1;
-        maxNumber = data.maxNumber || 50;
+async function loadSettings() {
+  const snapshot = await get(child(ref(db), "settings"));
+  if (snapshot.exists()) {
+    const data = snapshot.val();
+    attemptsLeft = data.maxAttempts || 6;
+    randomNumberMode = data.randomNumber ?? true;
+    minNumber = Number(data.minNumber) || 1;
+    maxNumber = Number(data.maxNumber) || 50;
+    password = data.password || "";
+    link = data.link || "";
+    info.textContent = `Du hast ${attemptsLeft} Versuche! 😎`;
+    rangeInfo.textContent = `Errate eine Zahl zwischen ${minNumber} und ${maxNumber}`;
+  } else {
+    info.textContent = "⚠️ Einstellungen nicht gefunden.";
+    rangeInfo.textContent = "";
+  }
+}
 
-        // Initialzahl
-        if(randomNumberMode){
-          randomNumber = Math.floor(Math.random() * (maxNumber - minNumber + 1)) + minNumber;
-        } else {
-          randomNumber = data.fixedNumber || 1;
-        }
+await loadSettings();
 
-        info.textContent = `Du hast ${attemptsLeft} Versuche! 😎`;
-        rangeInfo.textContent = `Errate eine Zahl zwischen ${minNumber} und ${maxNumber}`;
-      } else {
-        info.textContent = "⚠️ Einstellungen nicht gefunden.";
-        rangeInfo.textContent = "";
-      }
-    }
+guessBtn.onclick = async () => {
+  const guess = Number(guessInput.value);
+  if (!Number.isFinite(guess) || guess < minNumber || guess > maxNumber) {
+    result.textContent = `⚠️ Gib eine Zahl zwischen ${minNumber} und ${maxNumber} ein!`;
+    return;
+  }
 
-    await loadSettings();
+  let currentNumber;
+  if (randomNumberMode) {
+    currentNumber = Math.floor(Math.random() * (maxNumber - minNumber + 1)) + minNumber;
+  } else {
+    const fSnap = await get(child(ref(db, "settings/fixedNumber")));
+    currentNumber = fSnap.exists() ? Number(fSnap.val()) : minNumber;
+  }
 
-    // 🔹 Tipp-Button
-    guessBtn.onclick = () => {
-      const guess = Number(guessInput.value);
-      if(!guess || guess < minNumber || guess > maxNumber){
-        result.textContent = `⚠️ Gib eine Zahl zwischen ${minNumber} und ${maxNumber} ein!`;
-        return;
-      }
+  attemptsLeft--;
 
-      // Zufallszahl bei jedem Versuch neu generieren, falls aktiviert
-      if(randomNumberMode){
-        randomNumber = Math.floor(Math.random() * (maxNumber - minNumber + 1)) + minNumber;
-      }
+  if (guess === currentNumber) {
+    result.textContent = "✅ Richtig geraten!";
+    guessBtn.disabled = true;
+    guessInput.disabled = true;
+    hint.textContent = "";
 
-      attemptsLeft--;
+    // 🔹 Warte kurz, bevor weitergeleitet wird
+    setTimeout(() => {
+      window.location.href = "anfrage.html";
+    }, 1500); // 1,5 Sekunden warten
+    return;
+  }
 
-      if(guess === randomNumber){
-        result.textContent = "✅ Richtig geraten!";
-        pw.textContent = password;
-        passwordBox.style.display = "block";
-        guessBtn.disabled = true;
-        guessInput.disabled = true;
-      } else if(attemptsLeft <= 0){
-        result.textContent = `❌ Keine Versuche mehr! Die Zahl war ${randomNumber}.`;
-        guessBtn.disabled = true;
-        guessInput.disabled = true;
-      } else {
-        result.textContent = guess > randomNumber ? "📉 Zu hoch!" : "📈 Zu niedrig!";
-        info.textContent = `Noch ${attemptsLeft} Versuche`;
-      }
-    };
+  if (attemptsLeft <= 0) {
+    result.textContent = `❌ Keine Versuche mehr! Letzte Zahl war ${currentNumber}.`;
+    guessBtn.disabled = true;
+    guessInput.disabled = true;
+    hint.textContent = "";
+    return;
+  }
 
-    // 🔹 Admin Reload Trigger überwachen
-    const reloadRef = ref(db, "reloadTrigger");
-    const snapshot = await get(reloadRef);
-    if(snapshot.exists()) lastReload = snapshot.val();
-
-    onValue(reloadRef, (snapshot) => {
-      if(snapshot.exists()){
-        const reloadValue = snapshot.val();
-        if(reloadValue !== lastReload){
-          lastReload = reloadValue;
-          location.reload();
-        }
-      }
-    });
-  </script>
+  hint.textContent = guess > currentNumber ? "📉 Zu hoch!" : "📈 Zu niedrig!";
+  info.textContent = `Noch ${attemptsLeft} Versuche`;
+};
+</script>
 </body>
 </html>
