--- a/anfragen.html
+++ b/anfragen.html
@@ -1,1 +1,130 @@
-h
+<!DOCTYPE html>
+<html lang="de">
+<head>
+<meta charset="UTF-8">
+<title>Anfrage senden 🦎</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+  font-family: Arial;
+  background: #101820;
+  color: #fff;
+  text-align: center;
+  padding: 40px;
+}
+
+.box {
+  background: #1e293b;
+  display: inline-block;
+  padding: 30px;
+  border-radius: 12px;
+  width: 90%;
+  max-width: 400px;
+}
+
+input, button {
+  padding: 12px;
+  margin: 8px 0;
+  border-radius: 8px;
+  border: none;
+  width: 90%;
+  max-width: 300px;
+  font-size: 16px;
+}
+
+button {
+  background-color: #3b82f6;
+  color: #fff;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #2563eb;
+}
+
+#status, #password {
+  margin-top: 15px;
+  font-weight: bold;
+}
+</style>
+</head>
+<body>
+<div class="box">
+  <h1>📨 Anfrage senden</h1>
+  <p>Gib deinen Namen ein, um das Passwort anzufragen:</p>
+  <input type="text" id="nameInput" placeholder="Dein Name">
+  <button id="sendBtn">Anfrage senden</button>
+  <p id="status"></p>
+  <p id="password"></p>
+</div>
+
+<script type="module">
+const firebaseConfig = {
+  apiKey: "AIzaSyBSDffrKz3_AE_iuwOLuZNB0yWLStMysSI",
+  authDomain: "zahlenerraten.firebaseapp.com",
+  databaseURL: "https://zahlenerraten-default-rtdb.europe-west1.firebasedatabase.app",
+  projectId: "zahlenerraten",
+  storageBucket: "zahlenerraten.firebasestorage.app",
+  messagingSenderId: "143969932071",
+  appId: "1:143969932071:web:850baabab3f9c0f2de0f02",
+  measurementId: "G-KP89LYZJMT"
+};
+
+import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
+import { getDatabase, ref, push, set, onValue, get, child } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
+
+const app = initializeApp(firebaseConfig);
+const db = getDatabase(app);
+
+const nameInput = document.getElementById("nameInput");
+const sendBtn = document.getElementById("sendBtn");
+const statusP = document.getElementById("status");
+const passwordP = document.getElementById("password");
+
+let requestKey = null;
+let password = "";
+
+// Passwort aus settings laden
+async function loadPassword() {
+  const snapshot = await get(child(ref(db), "settings/password"));
+  if (snapshot.exists()) password = snapshot.val();
+}
+
+await loadPassword();
+
+sendBtn.onclick = async () => {
+  const name = nameInput.value.trim();
+  if (!name) {
+    statusP.textContent = "⚠️ Bitte gib deinen Namen ein!";
+    return;
+  }
+
+  // Anfrage in Firebase speichern
+  const newRef = push(ref(db, "requests"));
+  await set(newRef, {
+    name: name,
+    status: "offen"
+  });
+
+  requestKey = newRef.key;
+  statusP.textContent = "✅ Anfrage gesendet! Bitte warte auf Freigabe...";
+  nameInput.disabled = true;
+  sendBtn.disabled = true;
+
+  // Überwache Status in Echtzeit
+  const reqRef = ref(db, `requests/${requestKey}/status`);
+  onValue(reqRef, (snap) => {
+    if (!snap.exists()) return;
+    const status = snap.val();
+
+    if (status === "akzeptiert") {
+      statusP.textContent = "🎉 Anfrage akzeptiert!";
+      passwordP.textContent = `🔑 Hotspot-Passwort: ${password}`;
+    } else if (status === "abgelehnt") {
+      statusP.textContent = "❌ Anfrage wurde abgelehnt.";
+    }
+  });
+};
+</script>
+</body>
+</html>
