--- a/admin.html
+++ b/admin.html
@@ -1,106 +1,199 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="utf-8">
-  <title>Hotspot Admin 🔧</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    body { font-family: Arial; background:#111; color:#eee; text-align:center; padding:40px; }
-    input,button,label { padding:10px; border-radius:8px; margin:5px; width:200px; }
-    .box { background:#222; display:inline-block; padding:30px; border-radius:12px; }
-    #msg { margin-top:10px; color:#9aa7b8; }
-  </style>
+<meta charset="UTF-8">
+<title>Admin-Bereich 🦎</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+  font-family: Arial;
+  background: #0f172a;
+  color: #fff;
+  text-align: center;
+  padding: 30px;
+}
+
+h1 {
+  color: #38bdf8;
+}
+
+section {
+  background: #1e293b;
+  padding: 20px;
+  border-radius: 10px;
+  margin: 20px auto;
+  width: 90%;
+  max-width: 500px;
+  text-align: left;
+}
+
+label {
+  display: block;
+  margin-top: 10px;
+  font-weight: bold;
+}
+
+input, select, button {
+  margin-top: 5px;
+  width: 100%;
+  padding: 8px;
+  border-radius: 8px;
+  border: none;
+  font-size: 15px;
+}
+
+button {
+  background-color: #3b82f6;
+  color: white;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+button:hover {
+  background-color: #2563eb;
+}
+
+.request {
+  border-bottom: 1px solid #334155;
+  padding: 10px 0;
+}
+
+.request span {
+  display: inline-block;
+  width: 60%;
+}
+
+.request button {
+  width: auto;
+  padding: 6px 10px;
+  font-size: 13px;
+  margin-left: 5px;
+}
+</style>
 </head>
 <body>
-  <div class="box">
-    <h1>Hotspot Admin 🔧</h1>
+<h1>🦎 Admin-Bereich</h1>
 
-    <label>Hotspot Passwort:</label><br>
-    <input id="hotspotPassword" placeholder="Dein Passwort"><br>
+<section>
+  <h2>⚙️ Einstellungen</h2>
+  <label>Hotspot-Passwort:</label>
+  <input id="password" placeholder="Passwort eingeben">
 
-    <label>Max. Versuche:</label><br>
-    <input id="maxAttempts" type="number" min="1" max="50"><br>
+  <label>Minimale Zahl:</label>
+  <input type="number" id="minNumber" value="1">
 
-    <label>
-      <input type="checkbox" id="randomNumberSwitch"> Zufallszahl verwenden?
-    </label><br>
+  <label>Maximale Zahl:</label>
+  <input type="number" id="maxNumber" value="50">
 
-    <label id="numberLabel">Feste Zahl (wenn Zufall aus):</label><br>
-    <input type="number" id="fixedNumber" min="1" max="100"><br>
+  <label>Maximale Versuche:</label>
+  <input type="number" id="maxAttempts" value="6">
 
-    <label>Zahlenbereich bei Zufall:</label><br>
-    Von: <input id="minNumber" type="number" value="1" min="1" style="width:80px;">
-    Bis: <input id="maxNumber" type="number" value="50" min="1" style="width:80px;"><br>
+  <label>Zufallszahl aktivieren?</label>
+  <select id="randomNumber">
+    <option value="true">Ja</option>
+    <option value="false">Nein</option>
+  </select>
 
-    <button id="saveBtn">💾 Speichern</button><br>
-    <button id="reloadBtn">🔄 Alle Spieler neu laden</button>
-    <p id="msg"></p>
-  </div>
+  <label>Feste Zahl (wenn Zufall aus):</label>
+  <input type="number" id="fixedNumber" value="10">
 
-  <script type="module">
-    const firebaseConfig = {
-      apiKey: "AIzaSyBSDffrKz3_AE_iuwOLuZNB0yWLStMysSI",
-      authDomain: "zahlenerraten.firebaseapp.com",
-      databaseURL: "https://zahlenerraten-default-rtdb.europe-west1.firebasedatabase.app",
-      projectId: "zahlenerraten",
-      storageBucket: "zahlenerraten.firebasestorage.app",
-      messagingSenderId: "143969932071",
-      appId: "1:143969932071:web:850baabab3f9c0f2de0f02",
-      measurementId: "G-KP89LYZJMT"
-    };
+  <button id="saveBtn">💾 Einstellungen speichern</button>
+</section>
 
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
-    import { getDatabase, ref, set, get, child } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
+<section>
+  <h2>📨 Anfragen verwalten</h2>
+  <div id="requests">Lade Anfragen...</div>
+</section>
 
-    const app = initializeApp(firebaseConfig);
-    const db = getDatabase(app);
+<script type="module">
+const firebaseConfig = {
+  apiKey: "AIzaSyBSDffrKz3_AE_iuwOLuZNB0yWLStMysSI",
+  authDomain: "zahlenerraten.firebaseapp.com",
+  databaseURL: "https://zahlenerraten-default-rtdb.europe-west1.firebasedatabase.app",
+  projectId: "zahlenerraten",
+  storageBucket: "zahlenerraten.firebasestorage.app",
+  messagingSenderId: "143969932071",
+  appId: "1:143969932071:web:850baabab3f9c0f2de0f02",
+  measurementId: "G-KP89LYZJMT"
+};
 
-    const hotspotPassword = document.getElementById("hotspotPassword");
-    const maxAttempts = document.getElementById("maxAttempts");
-    const randomNumberSwitch = document.getElementById("randomNumberSwitch");
-    const fixedNumber = document.getElementById("fixedNumber");
-    const minNumber = document.getElementById("minNumber");
-    const maxNumberInput = document.getElementById("maxNumber");
-    const saveBtn = document.getElementById("saveBtn");
-    const reloadBtn = document.getElementById("reloadBtn");
-    const msg = document.getElementById("msg");
+import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
+import { getDatabase, ref, set, get, update, onValue } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
 
-    randomNumberSwitch.onchange = () => {
-      fixedNumber.disabled = randomNumberSwitch.checked;
-    };
+const app = initializeApp(firebaseConfig);
+const db = getDatabase(app);
 
-    async function loadSettings() {
-      const snapshot = await get(child(ref(db), "settings"));
-      if(snapshot.exists()){
-        const data = snapshot.val();
-        hotspotPassword.value = data.password || "";
-        maxAttempts.value = data.maxAttempts || 6;
-        randomNumberSwitch.checked = data.randomNumber ?? true;
-        fixedNumber.value = data.fixedNumber || 1;
-        fixedNumber.disabled = data.randomNumber ?? true;
-        minNumber.value = data.minNumber || 1;
-        maxNumberInput.value = data.maxNumber || 50;
+const passwordInput = document.getElementById("password");
+const minInput = document.getElementById("minNumber");
+const maxInput = document.getElementById("maxNumber");
+const attemptsInput = document.getElementById("maxAttempts");
+const randomSelect = document.getElementById("randomNumber");
+const fixedInput = document.getElementById("fixedNumber");
+const saveBtn = document.getElementById("saveBtn");
+const requestsDiv = document.getElementById("requests");
+
+// 🔹 Einstellungen laden
+async function loadSettings() {
+  const snapshot = await get(ref(db, "settings"));
+  if (snapshot.exists()) {
+    const s = snapshot.val();
+    passwordInput.value = s.password || "";
+    minInput.value = s.minNumber || 1;
+    maxInput.value = s.maxNumber || 50;
+    attemptsInput.value = s.maxAttempts || 6;
+    randomSelect.value = s.randomNumber ? "true" : "false";
+    fixedInput.value = s.fixedNumber || 10;
+  }
+}
+await loadSettings();
+
+// 🔹 Einstellungen speichern
+saveBtn.onclick = async () => {
+  await set(ref(db, "settings"), {
+    password: passwordInput.value,
+    minNumber: Number(minInput.value),
+    maxNumber: Number(maxInput.value),
+    maxAttempts: Number(attemptsInput.value),
+    randomNumber: randomSelect.value === "true",
+    fixedNumber: Number(fixedInput.value)
+  });
+  alert("✅ Einstellungen gespeichert!");
+};
+
+// 🔹 Anfragen anzeigen
+onValue(ref(db, "requests"), (snapshot) => {
+  requestsDiv.innerHTML = "";
+  if (!snapshot.exists()) {
+    requestsDiv.textContent = "Keine Anfragen vorhanden.";
+    return;
+  }
+
+  const data = snapshot.val();
+  for (const [key, req] of Object.entries(data)) {
+    const div = document.createElement("div");
+    div.classList.add("request");
+    div.innerHTML = `
+      <span>${req.name || "Unbekannt"} - ${req.status}</span>
+      ${
+        req.status === "offen"
+          ? `<button data-key="${key}" data-action="accept">✅ Akzeptieren</button>
+             <button data-key="${key}" data-action="deny">❌ Ablehnen</button>`
+          : ""
       }
-    }
+    `;
+    requestsDiv.appendChild(div);
+  }
 
-    loadSettings();
-
-    saveBtn.onclick = async () => {
-      await set(ref(db, "settings"), {
-        password: hotspotPassword.value,
-        maxAttempts: Number(maxAttempts.value),
-        randomNumber: randomNumberSwitch.checked,
-        fixedNumber: Number(fixedNumber.value),
-        minNumber: Number(minNumber.value),
-        maxNumber: Number(maxNumberInput.value)
-      });
-      msg.textContent = "✅ Gespeichert!";
+  // Klick-Events für Buttons
+  document.querySelectorAll("button[data-key]").forEach((btn) => {
+    btn.onclick = async () => {
+      const key = btn.getAttribute("data-key");
+      const action = btn.getAttribute("data-action");
+      const newStatus = action === "accept" ? "akzeptiert" : "abgelehnt";
+      await update(ref(db, `requests/${key}`), { status: newStatus });
     };
-
-    reloadBtn.onclick = async () => {
-      await set(ref(db, "reloadTrigger"), Date.now());
-      msg.textContent = "🔄 Alle Spieler werden neu geladen!";
-    };
-  </script>
+  });
+});
+</script>
 </body>
 </html>
