--- a/admin.html
+++ b/admin.html
@@ -118,7 +118,7 @@ const firebaseConfig = {
 };
 
 import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
-import { getDatabase, ref, set, get, update, onValue } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
+import { getDatabase, ref, set, get, update, onValue, remove } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
 
 const app = initializeApp(firebaseConfig);
 const db = getDatabase(app);
@@ -170,16 +170,14 @@ onValue(ref(db, "requests"), (snapshot) => {
 
   const data = snapshot.val();
   for (const [key, req] of Object.entries(data)) {
+    if (req.status !== "offen") continue; // Nur offene Anfragen anzeigen
+
     const div = document.createElement("div");
     div.classList.add("request");
     div.innerHTML = `
-      <span>${req.name || "Unbekannt"} - ${req.status}</span>
-      ${
-        req.status === "offen"
-          ? `<button data-key="${key}" data-action="accept">✅ Akzeptieren</button>
-             <button data-key="${key}" data-action="deny">❌ Ablehnen</button>`
-          : ""
-      }
+      <span>${req.name || "Unbekannt"}</span>
+      <button data-key="${key}" data-action="accept">✅ Akzeptieren</button>
+      <button data-key="${key}" data-action="deny">❌ Ablehnen</button>
     `;
     requestsDiv.appendChild(div);
   }
@@ -191,6 +189,11 @@ onValue(ref(db, "requests"), (snapshot) => {
       const action = btn.getAttribute("data-action");
       const newStatus = action === "accept" ? "akzeptiert" : "abgelehnt";
       await update(ref(db, `requests/${key}`), { status: newStatus });
+
+      // Nach kurzer Verzögerung aus der Liste entfernen
+      setTimeout(() => {
+        remove(ref(db, `requests/${key}`));
+      }, 500);
     };
   });
 });
